# rendering_engine

./: .gitignore  Cargo.toml  README.md
rendering_engine/src/: main.rs
rust_libraries/rendering_engine/: Cargo.toml
src/: application.rs  main.rs  render_gl.rs  triangle.frag  triangle.vert
src/engine/: Cargo.toml
src/engine/src/: application.rs  game_state.rs  lib.rs  window.rs
src/engine/src/components/: mod.rs
src/engine/src/ecs/: check_box_collider_system.rs  check_mouse_collision_system.rs  look_at_position_system.rs  mod.rs  position_update_system.rs  render_system.rs  selection_system.rs  system.rs  systems.rs  texture_update_system.rs
src/engine/src/events/: application_events.rs  event.rs  key_event.rs  mod.rs  mouse_button_event.rs  mouse_changed.rs  mouse_event.rs  window_event.rs
src/engine/src/generational_index/: generational_index.rs  mod.rs
src/engine/src/input/: input_handler.rs  mod.rs
src/engine/src/platform/: mod.rs
src/engine/src/platform/open_gl/: mod.rs
src/engine/src/platform/windows/: mod.rs  windows_window.rs
src/engine/src/renderer/: fade_triangle.frag  fade_triangle.glsl  mod.rs  render_application.rs  renderer_component.rs  renderer_systems.rs  renderer_tests.rs  triangle.frag  triangle.vert
src/engine/src/renderer/practice/: square.rs  two_triangles_single_array.rs
src/engine/src/renderer/shaders/: mod.rs  shader_program.rs  shader_utilities.rs
src/engine/src/renderer/shapes/: mod.rs  shape.rs
src/engine/src/utilities/: camera_utils.rs  mod.rs  vector_utils.rs
src/renderer/: mod.rs  render_application.rs  (+1 more)
(+4 files in other folders)
