[package]
name = "engine"
version = "0.1.0"
authors = ["Aryeh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
serde_json = "1.0.39"
serde = {version = "1.0.89", features = ["derive"]}
failure = "0.1.5"
gl = "0.12.0"
strum = "0.15.0"
strum_macros = "0.15.0"
bitflags = "1.0"
anymap = "0.12.1"



